Swagger docs updated. Person docs implementation. Some Fixes.
