# docs/swagger.json
@@ -137,6 +137,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Update movie BODY",
+                        "name": "movie",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Movie"
+                        }
                     }
                 ],
                 "responses": {
@@ -166,9 +175,20 @@
                     "persons"
                 ],
                 "summary": "Gets person from request URL name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Get person by name",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Person"
+                        }
                     }
                 }
             }
@@ -190,9 +210,23 @@
                     "persons"
                 ],
                 "summary": "Creates person from request body",
+                "parameters": [
+                    {
+                        "description": "Create Person",
+                        "name": "person",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Person"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Person"
+                        }
                     }
                 }
             }
@@ -214,6 +248,15 @@
                     "persons"
                 ],
                 "summary": "Deletes person from request URL id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Delete Person",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -238,9 +281,30 @@
                     "persons"
                 ],
                 "summary": "Updates person from request URL id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Update Person",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Person BODY",
+                        "name": "person",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Person"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Person"
+                        }
                     }
                 }
             }
@@ -269,13 +333,8 @@
                 }
             }
         },
-        "/user/sign-in/": {
+        "/user/sign-in": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -286,6 +345,17 @@
                     "users"
                 ],
                 "summary": "Signing In user endpoint",
+                "parameters": [
+                    {
+                        "description": "Login to account",
+                        "name": "loginInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.LoginInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -293,13 +363,8 @@
                 }
             }
         },
-        "/user/sign-up/": {
+        "/user/sign-up": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -310,15 +375,40 @@
                     "users"
                 ],
                 "summary": "Create user endpoint",
+                "parameters": [
+                    {
+                        "description": "Create User Account",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.LoginInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "handlers.LoginInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Movie": {
             "type": "object",
             "properties": {
@@ -336,6 +426,40 @@
                 },
                 "rating": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Person": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "birth": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
